@@ -6,8 +6,12 @@ import androidx.compose.runtime.CompositionLocalProvider
 import androidx.compose.ui.Modifier
 import cafe.adriel.voyager.navigator.Navigator
 import cafe.adriel.voyager.transitions.SlideTransition
+import data.tutorial.MongoDB
+import domain.initKoin
 import org.jetbrains.compose.ui.tooling.preview.Preview
+import org.koin.dsl.module
 import presentation.screens.tutorial.home.HomeScreen
+import presentation.screens.tutorial.home.HomeViewModel
 import presentation.style.DarkThemeCompositionLocal
 import presentation.style.MainTheme
 import presentation.style.dimIfDarkMode
@@ -16,6 +20,8 @@ import presentation.style.isDark
 @Composable
 @Preview
 fun App() {
+    initKoin()
+
     CompositionLocalProvider(DarkThemeCompositionLocal provides isDark()) {
         MainTheme {
             Surface(modifier = Modifier.fillMaxSize().dimIfDarkMode()) {
