@@ -2,6 +2,10 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+24-03-202
+Streak: 2
+    - Pull initKoin out of androidMain and into shared App code.
+
 23-03-2025
 Streak: 1
     - Following Tutorial: Finish layout of HomeScreen
